Closed Bug 75737 Opened 25 years ago Closed 25 years ago

[FIX]IFrame borders are drawn over when printing

Categories

(Core :: Printing: Output, defect, P1)

x86
Windows NT
defect

Tracking

()

VERIFIED FIXED
mozilla0.9

People

(Reporter: rods, Assigned: rods)

Details

(Whiteboard: fix in hand)

accepting, will attach fix
Status: NEW → ASSIGNED
Priority: -- → P1
Summary: IFrame borders are drawn over when printing → [FIX]IFrame borders are drawn over when printing
Whiteboard: fix in hand
Target Milestone: --- → mozilla0.9
Temporary fix until 75739 is fixed Index: nsFrameFrame.cpp =================================================================== RCS file: /cvsroot/mozilla/layout/html/document/src/nsFrameFrame.cpp,v retrieving revision 3.143 diff -u -r3.143 nsFrameFrame.cpp --- nsFrameFrame.cpp 2001/04/12 08:16:53 3.143 +++ nsFrameFrame.cpp 2001/04/12 16:23:00 @@ -692,7 +692,12 @@ //printf("inner paint %X (%d,%d,%d,%d) \n", this, aDirtyRect.x, aDirtyRect.y, aDirtyRect.width, aDirtyRect.height); // if there is not web shell paint based on our background color, // otherwise let the web shell paint the sub document - if (!mSubShell) { + + // isPaginated is a temporary fix for Bug 75737 + // and this should all be fixed correctly by Bug 75739 + PRBool isPaginated; + aPresContext->IsPaginated(&isPaginated); + if (!mSubShell && !isPaginated) { const nsStyleColor* color = (const nsStyleColor*)mStyleContext->GetStyleData(eStyleStruct_Color); aRenderingContext.SetColor(color->mBackgroundColor);
Looks like a good temporary fix: sr=attinasi@netscape.com
Looks good to me too, r=pollmann@netscape.com.
fixed
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Rod, can you veify this if it got fixed? thanks...
verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.