This is a temporary fix until 75739 is fixed, this keeps the brorders from being drawn over by the InnerFrame. Bug 75737 r=pollmann sr=attinasi